# aviation-load-factor-analysis

./: .gitignore  Main.ipynb  README.md  app.py  pyproject.toml
data/: Legend⁄Context.md
data/filtered/: dataset_a_3yr_market.csv  dataset_b_7yr_recovery.csv  dataset_c_3yr_pre_covid.csv
data/processed/: 2018-19_AIE_1_master.csv  2018-19_AIE_2_master.csv  2018-19_AI_1_master.csv  2018-19_AI_2_master.csv  2018-19_ALLIANCE_1_master.csv  2018-19_ALLIANCE_2_master.csv  2018-19_BLUE_1_master.csv  2018-19_BLUE_2_master.csv  2018-19_INDIGO_1_master.csv  2018-19_INDIGO_2_master.csv  2018-19_SPICE_1_master.csv  2018-19_SPICE_2_master.csv  2018-19_VISTARA_1_master.csv  2018-19_VISTARA_2_master.csv  2019-20_AIE_1_master.csv  2019-20_AIE_2_master.csv  2019-20_AI_1_master.csv  2019-20_AI_2_master.csv  2019-20_ALLIANCE_1_master.csv  2019-20_ALLIANCE_2_master.csv  2019-20_BLUE_1_master.csv  2019-20_BLUE_2_master.csv  2019-20_INDIGO_1_master.csv  2019-20_INDIGO_2_master.csv  2019-20_SPICE_1_master.csv  2019-20_SPICE_2_master.csv  2019-20_VISTARA_1_master.csv  2019-20_VISTARA_2_master.csv  2020-21_AIE_1_master.csv  2020-21_AIE_2_master.csv  2020-21_AI_1_master.csv  2020-21_AI_2_master.csv  2020-21_ALLIANCE_1_master.csv  2020-21_ALLIANCE_2_master.csv  2020-21_BLUE_1_master.csv  2020-21_BLUE_2_master.csv  2020-21_INDIGO_1_master.csv  2020-21_INDIGO_2_master.csv  2020-21_SPICE_1_master.csv  2020-21_SPICE_2_master.csv  (+60 more)
data/raw/: .~lock.2018-19_AI_1.xlsx#  .~lock.ALLIANCE_2021-22.xlsx#  2018-19_AIE_1.xlsx  (+101 more)
src/: analysis.py  config.py  data_loader.py  datasets.py  etl.py  plots.py
